--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.center {
+	flex: 1 0 auto;
+	width: auto;
+} 
