--- a/src/components/Cart/containers/CartContainer.module.css
+++ b/src/components/Cart/containers/CartContainer.module.css
@@ -1,7 +1,23 @@
 .container {
-      flex: 0 0 auto;
-      width: 20%;
-      display: flex;
-      flex-direction: column;
-      user-select: none;
+  flex: 0 0 auto;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  user-select: none;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #142e3f;
+  border-radius: 7px;
+  height: 52px;
+  text-transform: uppercase;
+  font-family: var(--font-montserrat);
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: #fff;
+  margin-bottom: 3px;
 }
